--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "caravel-lite"]
 	path = caravel
 	url = https://github.com/efabless/caravel-lite
+[submodule "verilog/rtl/wrapped_keyvalue"]
+	path = verilog/rtl/wrapped_keyvalue
+	url = https://github.com/giraypultar/wrapped_keyvalue
